--- a/index.html
+++ b/index.html
@@ -45,29 +45,27 @@
 	  
 	</div>
   </nav>
+
+  <nav class="navbar navbar-default navbar-static-top">
+  <div class="container"><p>copyright@Hao Xiong</p></div>
+  </nav>
+	
 	
 	
   <div class="jumbotron">
-  
-	
-  
 	<div class="container">
-	
-	
 	<div class="row">
 	  <div class="col-md-4" align="middle"><img class="img-rounded" src="haoxiong.jpg" alt="Hao Xiong's photo" width=150 height=200 style="margin-top:50px;"></div>
 	  
 	  <div class="col-md-8">
       <h1>Hao Xiong<small> (熊昊)</small></h1>
-	  <p>Department of Electronic Information and Electrical Engineering</p> 
 	  <p>Cyber Science and Engineering</p> 
+	  <p>Department of Electronic Information and Electrical Engineering</p> 
       <p>Shanghai Jiao Tong University</p> 
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
       </div>
 	</div>
-	
 	</div>
-	
   </div>
 	
 	
