--- a/index.html
+++ b/index.html
@@ -45,12 +45,6 @@
 	  
 	</div>
   </nav>
-
-  <nav class="navbar navbar-default navbar-static-top">
-  <div class="container"><p>copyright@Hao Xiong</p></div>
-  </nav>
-	
-	
 	
   <div class="jumbotron">
 	<div class="container">
@@ -67,6 +61,9 @@
 	</div>
 	</div>
   </div>
+	
+	
+  <div class="copyright" style="text-align:center;color:gray"><p>powered by Hao Xiong</p></div>
 	
 	
 
