--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	body { padding-top: 70px; }
+	p {font-size: 50px; }
 	
     <title>Hao Xiong's Homepage</title>
   </head>
@@ -62,7 +63,20 @@
 	</div>
   </div>
 	
-	
+  <div class="container">
+  <div class="row">
+    <div class="col-md-2"></div>
+	<div class="col-md-8">
+	  <div class="page-header"><h1>About me</h1></div>
+	  <p style="font-size: 22px; font-weight: normal;">introduction here</p>
+    <div class="col-md-2"></div>
+  </div>
+  </div>
+  
+  
+  
+  
+  
   <div class="copyright" style="text-align:center;color:gray"><p>powered by Hao Xiong</p></div>
 	
 	
