with page header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	body { padding-top: 70px; }
-	p {font-size: 50px; }
 	
     <title>Hao Xiong's Homepage</title>
   </head>
@@ -40,6 +39,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Projects</a></li>
         <li><a href="#">Publications</a></li>
+		<li><a href="#">CV</a></li>
 		<li><a href="#">Contacts</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -50,13 +50,12 @@
   <div class="jumbotron">
 	<div class="container">
 	<div class="row">
-	  <div class="col-md-4" align="middle"><img class="img-rounded" src="haoxiong.jpg" alt="Hao Xiong's photo" width=150 height=200 style="margin-top:50px;"></div>
+	  <div class="col-md-4" align="middle"><img class="img-rounded" src="haoxiong.jpg" alt="Hao Xiong's photo" width=150 height=200 style="margin-top:25px;"></div>
 	  
 	  <div class="col-md-8">
       <h1>Hao Xiong<small> (熊昊)</small></h1>
-	  <p>Cyber Science and Engineering</p> 
-	  <p>Department of Electronic Information and Electrical Engineering</p> 
-      <p>Shanghai Jiao Tong University</p> 
+	  <p style="font-size:18px;">Cyber Science and Engineering, Shanghai Jiao Tong University</p> 
+	  <p style="font-size:18px;">Email: taxuexh@sjtu.edu.cn</p> 
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
       </div>
 	</div>
@@ -68,9 +67,53 @@
     <div class="col-md-2"></div>
 	<div class="col-md-8">
 	  <div class="page-header"><h1>About me</h1></div>
-	  <p style="font-size: 22px; font-weight: normal;">introduction here</p>
-    <div class="col-md-2"></div>
+	  <p style="font-size: 20px;">I am a graduate student in my first year who are looking for a Ph.D. I am recently focused on data mining problems on graph, particularly graph neural networks (GNN) and graph embedding.</p>
+    </div>
+	<div class="col-md-2"></div>
   </div>
+  
+  <div class="row">
+    <div class="col-md-2"></div>
+	<div class="col-md-8">
+	  <div class="page-header"><h1>Projects</h1></div>
+	  <p style="font-size: 18px;">here</p>
+    </div>
+	<div class="col-md-2"></div>
+  </div>
+  
+  <div class="row">
+    <div class="col-md-2"></div>
+	<div class="col-md-8">
+	  <div class="page-header"><h1>Publications</h1></div>
+	  <p style="font-size: 18px;">here</p>
+    </div>
+	<div class="col-md-2"></div>
+  </div>
+  
+  <div class="row">
+    <div class="col-md-2"></div>
+	<div class="col-md-8">
+	  <div class="page-header"><h1>Education</h1></div>
+	  <ul style="font-size: 18px;">
+	    <li>M.S. Cyber Science and Engineering, Shanghai Jiao Tong University 2019.9-present</li>
+	    <li>B.E. Cyber Science and Engineering, Shanghai Jiao Tong University 2015.9-2019.6</li>
+	  </ul>
+    </div>
+	<div class="col-md-2"></div>
+  </div>
+  
+    <div class="row">
+    <div class="col-md-2"></div>
+	<div class="col-md-8">
+	  <div class="page-header"><h1>Contacts</h1></div>
+	  <ul style="font-size: 18px;">
+	  <li>Email: taxuexh@sjtu</li>
+	  <li>Phone: (+86)15168550825</li>
+	  <li>WeChat: 15168550825</li>
+    </div>
+	<div class="col-md-2"></div>
+  </div>
+  
   </div>
   
   
