--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	  
 	  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Projects</a></li>
+        <li><a href="TKDE_19_RRW.html">Projects</a></li>
         <li><a href="#">Publications</a></li>
 		<li><a href="#">CV</a></li>
 		<li><a href="#">Contacts</a></li>
@@ -67,7 +67,7 @@
     <div class="col-md-2"></div>
 	<div class="col-md-8">
 	  <div class="page-header"><h1>About me</h1></div>
-	  <p style="font-size: 20px;">I am a graduate student in my first year who are looking for a Ph.D. I am recently focused on data mining problems on graph, particularly graph neural networks (GNN) and graph embedding.</p>
+	  <p style="font-size: 18px;">I am a graduate student in my first year who are looking for a Ph.D. I am recently focused on data mining problems on graph, particularly graph neural networks (GNN) and graph embedding.</p>
     </div>
 	<div class="col-md-2"></div>
   </div>
