--- a/TKDE_19_RRW.html
+++ b/TKDE_19_RRW.html
@@ -72,11 +72,21 @@
     <div class="col-md-2"></div>
 	<div class="col-md-8">
 	  <div class="page-header"><h1>Demo</h1></div>
+	  <h3>Single-net embedding:</h3>
 	  <div class="row">
-	    <div class="col-md-6" align="middle"><img src="pic/karate.gif" width=320 height=240 ><p style="float:center">Dynamic embedding procedure of the karate network</p></div>
-		<div class="col-md-6" align="middle"><img src="pic/karate.png" width=320 height=240 ><p style="float:center">Embedding result of the karate network</p></div>
+	    <div class="col-md-6" align="middle"><img src="pic/karate.gif" width=320 height=240 ><p style="float:center">(a) Dynamic embedding procedure of the karate network</p></div>
+		<div class="col-md-6" align="middle"><img src="pic/karate.png" width=320 height=240 ><p style="float:center">(b) Embedding result of the karate network</p></div>
 	  </div>
-	  <p style="font-size: 18px;">From the dynamic single-net embedding procedure, we can easily observe how nodes attract with their neighbors and get far away from the others. </p>
+	  <p style="font-size: 18px;">From the dynamic single-net embedding procedure, we can easily observe how nodes attract with their neighbors and get far away from the others. And from the embedding PCA result as is in Fig.(b), we can safely claim that nodes which are embedded closely usually shares first-, second-, or higher-order proxmity.</p>
+	  
+	  <h3>Cross-net embedding:</h3>
+	  <div class="row">
+	    <div class="col-md-6" align="middle"><img src="pic/cross-karate.gif" alt="cross-karate" width=320 height=240 ><p style="float:center">(c) Dynamic embedding procedure of the karate network</p></div>
+		<div class="col-md-6" align="middle"><img src="pic/cross-karate.png" alt="cross-karate" width=320 height=240 ><p style="float:center">(d) Embedding result of the karate network</p></div>
+	  </div>
+	  <div align="middle"><img src="pic/cross-karate-3d.png" alt="cross-karate" width=320 height=240 ><p style="float:center">(e) Embedding result of the karate network</p></div>
+	  <p style="font-size: 18px;">here.</p>
+	  
     </div>
 	<div class="col-md-2"></div>
   </div>
