--- a/TKDE_19_RRW.html
+++ b/TKDE_19_RRW.html
@@ -49,9 +49,8 @@
 	
 
   <div class="jumbotron">
-	<div class="container">
-    <h1>Learning Single and Cross Network Node Representation via Radial Random Walk</h1>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	<div class="container" align="center">
+    <h1 style="font-size: 50px">Learning Single and Cross Network Node Representation via Radial Random Walk</h1>
     </div>
   </div>
 	
