--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	body { padding-top: 70px; }
 	
-    <title>Yiting Qian's Homepage</title>
+    <title>Hao Xiong's Homepage</title>
   </head>
   
   
@@ -34,13 +34,13 @@
         </button>
         <a class="navbar-brand" href="#">Home</a>
       </div>
-
-    <div class="collapse navbar-collapse" id="  bs-example-navbar-collapse-1">
+	  
+	  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="TKDE_19_RRW.html">Projects</a></li>
         <li><a href="#">Publications</a></li>
-    <li><a href="#">CV</a></li>
-    <li><a href="#">Contacts</a></li>
+		<li><a href="#">CV</a></li>
+		<li><a href="#">Contacts</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
 	  
@@ -50,12 +50,12 @@
   <div class="jumbotron">
 	<div class="container">
 	<div class="row">
-	  <div class="col-md-4" align="middle"><img class="img-rounded" src="photo.jpg" alt="Yiting Qian's photo" width=150 height=200 style="margin-top:25px;"></div>
+	  <div class="col-md-4" align="middle"><img class="img-rounded" src="photo.jpg" alt="Hao Xiong's photo" width=150 height=200 style="margin-top:25px;"></div>
 	  
 	  <div class="col-md-8">
-      <h1>Yiting Qian<small> (钱一婷)</small></h1>
+      <h1>Hao Xiong<small> (熊昊)</small></h1>
 	  <p style="font-size:18px;">Cyber Science and Engineering, Shanghai Jiao Tong University</p> 
-	  <p style="font-size:18px;">Email: 1365583814_qyt@sjtu.edu.cn</p> 
+	  <p style="font-size:18px;">Email: taxuexh@sjtu.edu.cn</p> 
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
       </div>
 	</div>
@@ -66,8 +66,8 @@
   <div class="row">
     <div class="col-md-2"></div>
 	<div class="col-md-8">
-	  <div class="page-header"><h1>Introduction</h1></div>
-	  <p style="font-size: 18px;">I recently focus on data mining problems on time series prediction, particularly prediction models based on spatio-temporal correlations.</p>
+	  <div class="page-header"><h1>About me</h1></div>
+	  <p style="font-size: 18px;">I am a graduate student in my first year who are looking for a Ph.D. I am recently focused on data mining problems on graph, particularly graph neural networks (GNN) and graph embedding.</p>
     </div>
 	<div class="col-md-2"></div>
   </div>
@@ -76,7 +76,7 @@
     <div class="col-md-2"></div>
 	<div class="col-md-8">
 	  <div class="page-header"><h1>Projects</h1></div>
-	  <p style="font-size: 18px;">Decision Technology of Court Management Based on Case Situation Study 2019.2-present</p>
+	  <p style="font-size: 18px;">here</p>
     </div>
 	<div class="col-md-2"></div>
   </div>
@@ -95,8 +95,8 @@
 	<div class="col-md-8">
 	  <div class="page-header"><h1>Education</h1></div>
 	  <ul style="font-size: 18px;">
-	    <li>M.S. Cyber Science and Engineering, Shanghai Jiao Tong University 2018.9-present</li>
-	    <li>B.E. School of Information and Engineering, Southeast University 2014.9-2018.6</li>
+	    <li>M.S. Cyber Science and Engineering, Shanghai Jiao Tong University 2019.9-present</li>
+	    <li>B.E. Cyber Science and Engineering, Shanghai Jiao Tong University 2015.9-2019.6</li>
 	  </ul>
     </div>
 	<div class="col-md-2"></div>
@@ -107,8 +107,9 @@
 	<div class="col-md-8">
 	  <div class="page-header"><h1>Contacts</h1></div>
 	  <ul style="font-size: 18px;">
-	  <li>Email: 1365583814_qyt@sjtu.edu.cn</li>
-	  <li>Phone: (+86)13358133311</li>
+	  <li>Email: taxuexh@sjtu</li>
+	  <li>Phone: (+86)15168550825</li>
+	  <li>WeChat: 15168550825</li>
     </div>
 	<div class="col-md-2"></div>
   </div>
@@ -119,7 +120,7 @@
   
   
   
-  <div class="copyright" style="text-align:center;color:gray"><p>powered by Yiting Qian</p></div>
+  <div class="copyright" style="text-align:center;color:gray"><p>powered by Hao Xiong</p></div>
 	
 	
 
