--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="jumbotron">
 	<div class="container">
 	<div class="row">
-	  <div class="col-md-4" align="middle"><img class="img-rounded" src="photo.jpg" alt="Hao Xiong's photo" width=150 height=200 style="margin-top:25px;"></div>
+	  <div class="col-md-4" align="middle"><img class="img-rounded" src="haoxiong.jpg" alt="Hao Xiong's photo" width=150 height=200 style="margin-top:25px;"></div>
 	  
 	  <div class="col-md-8">
       <h1>Hao Xiong<small> (熊昊)</small></h1>
