--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	body { padding-top: 70px; }
 	
-    <title>Hao Xiong's Homepage</title>
+    <title>Yiting Qian's Homepage</title>
   </head>
   
   
@@ -50,12 +50,12 @@
   <div class="jumbotron">
 	<div class="container">
 	<div class="row">
-	  <div class="col-md-4" align="middle"><img class="img-rounded" src="haoxiong.jpg" alt="Hao Xiong's photo" width=150 height=200 style="margin-top:25px;"></div>
+	  <div class="col-md-4" align="middle"><img class="img-rounded" src="photo.jpg" alt="Yiting Qian's photo" width=150 height=200 style="margin-top:25px;"></div>
 	  
 	  <div class="col-md-8">
-      <h1>Hao Xiong<small> (熊昊)</small></h1>
+      <h1>Yiting Qian<small> (钱一婷)</small></h1>
 	  <p style="font-size:18px;">Cyber Science and Engineering, Shanghai Jiao Tong University</p> 
-	  <p style="font-size:18px;">Email: taxuexh@sjtu.edu.cn</p> 
+	  <p style="font-size:18px;">Email: 1365583814_qyt@sjtu.edu.cn</p> 
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
       </div>
 	</div>
@@ -67,7 +67,7 @@
     <div class="col-md-2"></div>
 	<div class="col-md-8">
 	  <div class="page-header"><h1>About me</h1></div>
-	  <p style="font-size: 18px;">I am a graduate student in my first year who are looking for a Ph.D. I am recently focused on data mining problems on graph, particularly graph neural networks (GNN) and graph embedding.</p>
+	  <p style="font-size: 18px;">I recently focus on data mining problems on time series prediction, particularly on spatio-temporal crime prediction and neural network.</p>
     </div>
 	<div class="col-md-2"></div>
   </div>
@@ -94,9 +94,9 @@
     <div class="col-md-2"></div>
 	<div class="col-md-8">
 	  <div class="page-header"><h1>Education</h1></div>
-	  <ul style="font-size: 18px;">
-	    <li>M.S. Cyber Science and Engineering, Shanghai Jiao Tong University 2019.9-present</li>
-	    <li>B.E. Cyber Science and Engineering, Shanghai Jiao Tong University 2015.9-2019.6</li>
+	  <ul style="font-size: 18px;">    
+	    <li>M.E. Cyber Science and Engineering, Shanghai Jiao Tong University 2018.9-present</li>
+      <li>B.S. School of Information and Engineering, Southeast University 2014.9-2018.6</li>
 	  </ul>
     </div>
 	<div class="col-md-2"></div>
@@ -107,9 +107,8 @@
 	<div class="col-md-8">
 	  <div class="page-header"><h1>Contacts</h1></div>
 	  <ul style="font-size: 18px;">
-	  <li>Email: taxuexh@sjtu</li>
-	  <li>Phone: (+86)15168550825</li>
-	  <li>WeChat: 15168550825</li>
+	  <li>Email: 1365583814_qyt@sjtu.edu.cn</li>
+	  <li>Phone: (+86)13358133311</li>
     </div>
 	<div class="col-md-2"></div>
   </div>
