--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="col-md-2"></div>
 	<div class="col-md-8">
 	  <div class="page-header"><h1>Projects</h1></div>
-	  <p style="font-size: 18px;">here</p>
+	  <p style="font-size: 18px;">Research on Key Technologies of Intelligent Integrated Court Management and Decision-making </p>
     </div>
 	<div class="col-md-2"></div>
   </div>
