--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   
   
   
-  <div class="copyright" style="text-align:center;color:gray"><p>powered by Hao Xiong</p></div>
+  <div class="copyright" style="text-align:center;color:gray"><p>powered by Yiting Qian</p></div>
 	
 	
 
